--- a/PersonalAllowanceApp/app/src/main/res/layout/activity_main.xml
+++ b/PersonalAllowanceApp/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,7 @@
         android:text="$0.00"
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,23 +35,25 @@
         android:id="@+id/DecrementButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="60dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
         android:text="Decrement"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
 
     android:text="Enter Spending:"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/DecrementButton"
-        app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toStartOf="@+id/DecrementButton"
+    app:layout_constraintStart_toStartOf="parent"
 
     <EditText
         android:id="@+id/SpendingInputText"
-        android:layout_width="85dp"
+        android:layout_width="134dp"
         android:layout_height="46dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginLeft="32dp"
         android:layout_marginStart="32dp"
         android:ems="10"
         android:hint="$0.00"
@@ -64,10 +65,11 @@
         android:id="@+id/StartButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="60dp"
         android:text="Button"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
